--- a/app/src/main/res/values/type.xml
+++ b/app/src/main/res/values/type.xml
@@ -89,4 +89,8 @@
         <!--Your custom type style here-->
     </style>
 
+    <style name="TextAppearance.Soulpicks.EmptyState" parent="TextAppearance.MaterialComponents.Body2">
+        <item name="android:textColor">@color/material_on_surface_disabled</item>
+    </style>
+
 </resources>
