--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 ~ Copyright (C) 2019 The Android Open Source Project
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -19,8 +18,7 @@
 
     <!--Components-->
 
-    <style name="Widget.Soulpicks.Switch" parent="Widget.MaterialComponents.CompoundButton.Switch">
-    </style>
+    <style name="Widget.Soulpicks.Switch" parent="Widget.MaterialComponents.CompoundButton.Switch"></style>
 
     <style name="Widget.Soulpicks.Button" parent="Widget.MaterialComponents.Button">
         <item name="textAllCaps">false</item>
@@ -33,6 +31,17 @@
     <style name="Widget.Soulpicks.OutlinedButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="textAllCaps">false</item>
     </style>
+
+
+    <style name="Widget.Soulpicks.OutlinedButton.Checkable">
+        <item name="android:textColor">@color/color_materialbuttoncheckable_text_selector</item>
+        <item name="iconTint">@color/color_materialbuttoncheckable_text_selector</item>
+        <item name="strokeColor">@color/color_materialbuttoncheckable_ripple_selector</item>
+        <item name="backgroundTint">@color/color_materialbuttoncheckable_background_selector</item>
+        <item name="rippleColor">@color/color_materialbuttoncheckable_ripple_selector</item>
+    </style>
+
+
 
     <style name="Widget.Soulpicks.TabLayout" parent="Widget.MaterialComponents.TabLayout">
         <item name="tabTextAppearance">@style/TextAppearance.Soulpicks.TabLayout</item>
@@ -55,6 +64,23 @@
         <item name="iconStartPadding">4dp</item>
         <item name="iconEndPadding">-4dp</item>
     </style>
+
+    <style name="Widget.Soulpicks.Chip.Button">
+        <item name="android:textAppearance">@style/TextAppearance.Soulpicks.Chip.Button</item>
+        <item name="chipEndPadding">16dp</item>
+        <item name="chipStartPadding">16dp</item>
+        <item name="android:gravity">center_vertical|start</item>
+    </style>
+
+    <style name="Widget.Soulpicks.Chip.Green">
+        <item name="chipBackgroundColor">@color/secondary</item>
+        <item name="chipStrokeColor">@color/secondary</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="chipIconSize">12dp</item>
+        <item name="closeIconTint">@color/white</item>
+        <item name="android:gravity">center_vertical|start</item>
+    </style>
+
 
     <style name="Widget.Soulpicks.SearchView" parent="Widget.AppCompat.SearchView">
         <item name="android:iconifiedByDefault">false</item>
@@ -79,7 +105,9 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="bottomSheetStyle">@style/Widget.MyTheme.BottomSheet.Modal</item>
         <item name="android:navigationBarColor">?attr/colorSurface</item>
-        <item name="android:navigationBarDividerColor" tools:ignore="NewApi">@android:color/transparent</item>
+        <item name="android:navigationBarDividerColor" tools:ignore="NewApi">
+            @android:color/transparent
+        </item>
     </style>
 
 
@@ -111,7 +139,7 @@
     </style>
 
     <style name="Widget.Soulpicks.AdvancedFabMenuStyle.Linear">
-      <item name="menu_backgroundColor">#66000000</item>
+        <item name="menu_backgroundColor">#66000000</item>
     </style>
 
     <style name="Widget.Soulpicks.AdvancedFabStyle" parent="">
