--- a/app/src/main/res/values/type.xml
+++ b/app/src/main/res/values/type.xml
@@ -93,4 +93,16 @@
         <item name="android:textColor">@color/material_on_surface_disabled</item>
     </style>
 
+    <style name="TextAppearance.Soulpicks.Chip" parent="TextAppearance.MaterialComponents.Chip">
+        <item name="android:textColor">@color/color_chip_text</item>
+        <item name="android:gravity">center_vertical|start</item>
+    </style>
+
+    <style name="TextAppearance.Soulpicks.Chip.Button" parent="TextAppearance.MaterialComponents.Chip">
+        <item name="android:textColor">?android:textColorPrimary</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:gravity">center_vertical|start</item>
+    </style>
+
+
 </resources>
