--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -91,6 +91,7 @@
         <item name="searchViewStyle">@style/Widget.Soulpicks.SearchView</item>
         <item name="android:searchViewStyle">@style/Widget.Soulpicks.SearchView</item>
         <item name="switchStyle">@style/Widget.Soulpicks.Switch</item>
+        <item name="checkboxStyle">@style/Widget.Soulpicks.Checkbox</item>
     </style>
 
 
