--- a/app/src/main/res/values/type.xml
+++ b/app/src/main/res/values/type.xml
@@ -105,4 +105,17 @@
     </style>
 
 
+    <style name="TextAppearance.Soulpicks.AlertDialog.Title" parent="">
+        <item name="android:maxLines">1</item>
+        <item name="android:scrollHorizontally">true</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="TextAppearance.Soulpicks.AlertDialog.Text" parent="">
+        <!-- Set text size and color of title and message here -->
+        <item name="android:textSize">16sp</item>
+        <!--        <item name="android:textColor">@color/textSecondary</item>-->
+    </style>
 </resources>
