--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -100,7 +100,8 @@
     <color name="onBackground">@color/black</color>
     <color name="onSurface">@color/black</color>
     <color name="onError">@color/white</color>
-    <color name="chipBorder">@color/black</color>
+    <color name="chipBorder">@color/gray</color>
+    <color name="chipText">@color/steel</color>
     <color name="iconColor">@color/steel</color>
 
 
