--- a/app/src/main/res/layout/component_chips.xml
+++ b/app/src/main/res/layout/component_chips.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 ~ Copyright (C) 2019 The Android Open Source Project
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,71 +15,83 @@
 -->
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:clipToPadding="false"
-  android:paddingTop="@dimen/keyline_5"
-  android:paddingBottom="@dimen/keyline_5"
-  android:paddingStart="@dimen/keyline_4"
-  android:paddingEnd="@dimen/keyline_4">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:clipToPadding="false"
+    android:paddingStart="@dimen/keyline_4"
+    android:paddingTop="@dimen/keyline_5"
+    android:paddingEnd="@dimen/keyline_4"
+    android:paddingBottom="@dimen/keyline_5">
 
     <io.material.materialthemebuilder.widget.LabelLinkView
-      android:id="@+id/label"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/chip_label_title"
-      app:linkUrl="https://material.io/design/components/chips.html"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/chip_label_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:linkUrl="https://material.io/design/components/chips.html" />
 
     <com.google.android.material.chip.ChipGroup
-      android:id="@+id/chip_group"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/component_label_horizontal_margin"
-      app:chipSpacing="@dimen/keyline_2"
-      app:layout_constraintTop_toBottomOf="@+id/label"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent">
+        android:id="@+id/chip_group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/component_label_horizontal_margin"
+        app:chipSpacing="@dimen/keyline_2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/label">
 
         <com.google.android.material.chip.Chip
-          android:id="@+id/chip_action"
-            android:checkable="true"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="@string/chip_action_title" />
+            android:id="@+id/chip_action"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chip_action_title"
+            app:chipIcon="@drawable/ic_camera" />
 
         <com.google.android.material.chip.Chip
-            style="@style/TextAppearance.Soulpicks.Chip.Button"
             android:id="@+id/chip_button"
-            android:checkable="true"
+            style="@style/Widget.Soulpicks.Chip.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/chip_button_title" />
 
         <com.google.android.material.chip.Chip
-          style="@style/Widget.MaterialComponents.Chip.Filter"
-          android:id="@+id/chip_filter"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:checked="true"
-          android:text="@string/chip_filter_title" />
+            android:id="@+id/chip_button_green"
+            style="@style/Widget.Soulpicks.Chip.Green"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chip_button_green" />
 
         <com.google.android.material.chip.Chip
-          style="@style/Widget.MaterialComponents.Chip.Choice"
-          android:id="@+id/chip_choice"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="@string/chip_choice_title" />
+            android:id="@+id/chip_filter"
+            style="@style/Widget.MaterialComponents.Chip.Filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="@string/chip_filter_title" />
 
         <com.google.android.material.chip.Chip
-          style="@style/Widget.MaterialComponents.Chip.Entry"
-          android:id="@+id/chip_entry"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="@string/chip_entry_title" />
+            android:id="@+id/chip_choice"
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chip_choice_title" />
 
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_entry"
+            style="@style/Widget.MaterialComponents.Chip.Entry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chip_entry_title" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_square"
+            style="@style/Widget.Soulpicks.Chip.Square"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chup_square_title" />
     </com.google.android.material.chip.ChipGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
