--- a/app/src/main/res/values/type.xml
+++ b/app/src/main/res/values/type.xml
@@ -75,6 +75,7 @@
 
     <style name="TextAppearance.Soulpicks.Body2" parent="TextAppearance.MaterialComponents.Body2">
         <!--Your custom type style here-->
+        <item name="android:textColor">@color/steel</item>
     </style>
 
     <style name="TextAppearance.Soulpicks.Button" parent="TextAppearance.MaterialComponents.Button">
