--- a/app/src/main/res/layout/component_searchview.xml
+++ b/app/src/main/res/layout/component_searchview.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="@dimen/keyline_5"
-    android:paddingBottom="@dimen/keyline_5"
     android:paddingStart="@dimen/keyline_4"
-    android:paddingEnd="@dimen/keyline_4">
+    android:paddingTop="@dimen/keyline_5"
+    android:paddingEnd="@dimen/keyline_4"
+    android:paddingBottom="@dimen/keyline_5">
 
     <io.material.materialthemebuilder.widget.LabelLinkView
         android:id="@+id/label"
@@ -17,14 +17,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.SearchView
+        style="?searchViewStyle"
+        android:background="@drawable/bg_search"
         android:id="@+id/searchview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/keyline_4"
-        android:clipToPadding="false"
+        app:queryHint="Search hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/label"
-        app:queryHint="Query hint"
-        app:searchHintIcon="@drawable/ic_share_control_normal_24dp" />
+        app:layout_constraintTop_toBottomOf="@+id/label" />
 </androidx.constraintlayout.widget.ConstraintLayout>
