--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,7 +52,7 @@
     </style>
 
     <style name="TextAppearance.Soulpicks.TabLayout" parent="@style/TextAppearance.MaterialComponents.Button">
-        <item name="textAllCaps">false</item>
+<!--        <item name="textAllCaps">false</item>-->
     </style>
 
 
@@ -86,11 +86,13 @@
     </style>
 
     <style name="Widget.Soulpicks.Chip.Green">
-        <item name="chipBackgroundColor">@color/secondary</item>
-        <item name="chipStrokeColor">@color/secondary</item>
+        <item name="chipBackgroundColor">@color/secondaryVariant</item>
+        <item name="chipStrokeColor">@color/secondaryVariant</item>
         <item name="android:textColor">@color/white</item>
+        <item name="chipIconTint">@color/white</item>
         <item name="chipIconSize">12dp</item>
         <item name="closeIconTint">@color/white</item>
+
         <item name="android:gravity">center_vertical</item>
     </style>
 
@@ -100,6 +102,11 @@
         <item name="iconifiedByDefault">false</item>
         <item name="measureWithLargestChild">true</item>
         <item name="android:gravity">left</item>
+        <item name="queryBackground">@null</item>
+        <item name="android:background">@drawable/bg_search</item>
+        <item name="closeIcon">@drawable/ic_close_dark</item>
+        <item name="searchIcon">@drawable/ic_search_grey</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
 
