--- a/app/src/main/res/layout/component_searchview.xml
+++ b/app/src/main/res/layout/component_searchview.xml
@@ -20,6 +20,7 @@
         style="?searchViewStyle"
         android:background="@drawable/bg_search"
         android:id="@+id/searchview"
+        android:theme="@style/Widget.Soulpicks.SearchView.SmallSize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/keyline_4"
