--- a/app/src/main/res/drawable/bg_search.xml
+++ b/app/src/main/res/drawable/bg_search.xml
@@ -5,7 +5,7 @@
     <shape android:shape="rectangle">
         <stroke android:color="@color/chipBorder" android:width="1dp" />
         <corners android:radius="8dp" />
-        <solid android:color="@color/background">
+        <solid android:color="?android:attr/colorBackground">
         </solid>
     </shape>
 </inset>
