--- a/app/src/main/res/layout/component_chips.xml
+++ b/app/src/main/res/layout/component_chips.xml
@@ -59,7 +59,7 @@
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip_button_green"
-            style="@style/Widget.Soulpicks.Chip.Green"
+            style="@style/Widget.Soulpicks.Chip.Checked"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/chip_button_green" />
