--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,12 +17,8 @@
     <!--Top level DayNight theme to be used in AndroidManifest.xml-->
     <style name="Theme.Soulpicks" parent="Base.Theme.Soulpicks" />
 
-    <style name="Theme.Soulpicks.Onboarding" parent="Base.Theme.Soulpicks.Onboarding">
+    <style name="Theme.Soulpicks.Onboarding" parent="Theme.Soulpicks">
         <item name="android:colorBackground">@color/white</item>
-    </style>
-
-    <style name="Base.Theme.Soulpicks.Onboarding" parent="Base.Theme.Soulpicks">
-
     </style>
 
     <!--Base custom theme which will be shared between both light and dark theme variants-->
@@ -56,7 +52,7 @@
 
 
         <!-- Text colors -->
-        <item name="android:textColorPrimary">@color/onBackground</item>
+        <item name="android:textColorPrimary">?attr/colorOnBackground</item>
         <item name="android:textColorSecondary">@color/steel</item>
 
         <!-- i.e. Edit text cursor color -->
